/*
 * Copyright 2025, TeamDev. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */

syntax = "proto3";

package spine.validation.bound;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.tools.validation.bound";
option java_outer_classname = "NumericBoundProto";
option java_multiple_files = true;

import "spine/base/field_path.proto";

// A numeric value or a field value that restricts the range of numeric fields.
message NumericBound {

    // Whether the bound value itself should be excluded from the range.
    bool exclusive = 1;

    // The bound value.
    //
    // Note that we do not cover all integer types. The remaining integers do not introduce
    // their own ranges. They introduce alternative binary representations.
    //
    // For example, `sfixed32` has the same range of values as `int32`. But uses always 4
    // bytes of spaces in comparison to `int32`, which uses variable-length encoding.
    //
    oneof value {
        float float_value = 2;
        double double_value = 3;
        int32 int32_value = 4;
        int64 int64_value = 5;
        uint32 uint32_value = 6;
        uint64 uint64_value = 7;
        spine.base.FieldPath field_value = 8;
    }
}
